September 5, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * libpcsxcore/cdriso.c: Don't feed CDDA data to the SPU plugin when CDDA
   is muted, which fixes the "noise" in Final Fantasy 8. Also check for
   image.bin.toc in addition to image.toc.

September 4, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * libpcsxcore/cdriso.c: Don't delay before feeding CDDA data to the SPU
   plugin.
 * plugins/dfsound/alsa.c: Don't try initializing CDDA sound handle over
   and over and over again if failed.

September 3, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * libpcsxcore/cdriso.c: Fixed time overflow on 32-bit GNU/Linux system.

September 1, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * libpcsxcore/cdrom.c: Added the definations of some missing commands.

August 30, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * libpcsxcore/cdriso.c: Implemented CDDA playing via SPUplayCDDAchannel().
   Now CD tracks can be played directly via a SPU plugin which implements the
   SPUplayCDDAchannel() function, e.g., spuEternal.
 * libpcsxcore/cdriso.h: Removed unused prototypes.
 * doc/tweaks.txt: Removed obsolete information.
 * win32/pcsx.dsp: Use Multithreaded instead of Singlethreaded.
 * plugins/dfsound/alsa.c: Set the buffer_time and period_time manually,
   hopefully the "lagging" issue can be fixed. Implemented
   SPUplayCDDAchannel() in the ALSA driver.

August 29, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * plugins/dfcdrom/cdr.c: Don't restart the track if play was called with
   the same time as the previous call.
 * libpcsxcore/cdriso.c: Added playCDDA() and stopCDDA() functions. (still
   not implemented)

August 27, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * libpcsxcore/plugins.h: Added prototype and interface for
   SPUplayCDDAchannel().
 * libpcsxcore/plugins.c: Likewise.

August 26, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * win32/pcsx.rc: Completed the Cheat Search dialog.
 * win32/resource.h: Likewise.
 * win32/gui/CheatDlg.c: Implemented the Cheat Search dialog. Fixed MinGW